--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
 
-    <div class="container">
+    <div class="container-flex">
 
       <!--header-->
       <div class="row">
@@ -33,6 +33,11 @@
             <div class="email">
               <h4>bemappleton@gmail.com</h4>
             </div>
+          </div>
+          <div class="pull-right col-md-12 col-sm-12"id="github-link">
+            <a href="https://github.com/bonnifer/Bonnie-Portfolio-Website">
+              <img class="responsive-image" src="github.png" alt="github-icon"/>
+            </a>
           </div>
         </div>
       </div>
