--- a/about-me.html
+++ b/about-me.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Bonnie Appleton Portfolio</title>
+		<title>Bonnie Appleton About Page</title>
 
 		<!--Fonts-->
 		<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,300|Codystar' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
 
       <!--header-->
       <div class="row">
-        <div class="header navbar text-right col-md-12">
+        <div class="cv-header header navbar text-right col-md-12">
           <div class="row">
             <div class="pull-right title-block">
               <div class="title" id="my-name">
@@ -48,35 +48,19 @@
         </div>
       </div>
 
-
-      <!--portfolio links-->
+      <!--CV sections-->
       <div class="row">
-        <div class="text-center boxes col-md-12">
-          <div class="col-md-3 col-sm-6">
-            <div class="box" id="text-box">
-              <h4>Aspiring web developer<br> Dressmaker<br> Eternal student<br></h4>
+        <div class="col-md-12">
+          <div class="cv-body">
+            <div class="cv-section" id="welcome">
+              <h2>Welcome to my website, I'm glad you're here</h2>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="aboutMe.html">
-              <div class="box colored-box" id="box1">
-                <h3>About<br> Me</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="CV.html">
-              <div class="box colored-box" id="box2">
-                <h3>Curriculum<br> Vitae</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="wikiTreasureHunt.html">
-              <div class="box colored-box" id="box3">
-                <h3>Sample<br> JS Project</h3>
-              </div>
-            </a>
+            <div class="cv-section" id="about-me-img">
+              <img src="images/bonnieappleton.jpg">
+            </div>
+            <div class="cv-section" id="about-me">
+              <p>This is my about me</p>
+            </div>
           </div>
         </div>
       </div>
