--- a/aboutMe.html
+++ b/aboutMe.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Bonnie Appleton Portfolio</title>
+		<title>Bonnie Appleton About Page</title>
 
 		<!--Fonts-->
 		<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,300|Codystar' rel='stylesheet' type='text/css'>
@@ -22,7 +22,7 @@
 
       <!--header-->
       <div class="row">
-        <div class="header navbar text-right col-md-12">
+        <div class="cv-header header navbar text-right col-md-12">
           <div class="row">
             <div class="pull-right title-block">
               <div class="title" id="my-name">
@@ -48,35 +48,22 @@
         </div>
       </div>
 
-
-      <!--portfolio links-->
+      <!--CV sections-->
       <div class="row">
-        <div class="text-center boxes col-md-12">
-          <div class="col-md-3 col-sm-6">
-            <div class="box" id="text-box">
-              <h4>Aspiring web developer<br> Dressmaker<br> Eternal student<br></h4>
+        <div class="col-md-12">
+          <div class="cv-body">
+            <div class="cv-section" id="welcome">
+              <h3>Hi I'm Bonnie, welcome to my little corner of the internet</h3>
             </div>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="aboutMe.html">
-              <div class="box colored-box" id="box1">
-                <h3>About<br> Me</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="CV.html">
-              <div class="box colored-box" id="box2">
-                <h3>Curriculum<br> Vitae</h3>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-3 col-sm-6">
-            <a href="wikiTreasureHunt.html">
-              <div class="box colored-box" id="box3">
-                <h3>Sample<br> JS Project</h3>
-              </div>
-            </a>
+            <div class="cv-section" id="about-me-img">
+              <img src="images/bonnieappleton.jpg">
+            </div>
+            <div class="cv-section" id="about-me">
+              <p>I'm an aspiring web developer currently based in Oxford, UK. I studied Chemistry at Oxford University before moving to <a href="www.ingenta.com">Ingenta</a> to test websites. Having worked there for three years I have gained a lot of web development knowledge and now want to spread my wings as a fully fledged developer.</p>
+              <p>This site is a space for me to showcase my what I've learnt so far and hopefully catch your eye! If you'd like to know more about my skills please see my <a href="CV.html">CV page</a>.</p>
+              <p>When I'm not learning about websites I sew and write about dressmaking online. I'm a keen amateur photographer and I love to cook Japanese food.</p>
+              <p>I can't wait to hear from you!</p>
+            </div>
           </div>
         </div>
       </div>
