--- a/blogpage.html
+++ b/blogpage.html
@@ -8,7 +8,7 @@
 		<title>Bonnie Appleton Portfolio</title>
 
 		<!--Fonts-->
-		<link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,300|Codystar' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Fredericka+the+Great' rel='stylesheet' type='text/css'>
 
     <!--Bootstrap-->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -20,6 +20,7 @@
   <body>
 
     <div class="container">
+      <a href='http://www.freepik.com/free-vector/golden-confetti-background_746410.htm'></a>
 
       <!--Navbar-->
       <div class="row">
@@ -40,9 +41,10 @@
                 </div>
               </div>
               <div class="col-md-3">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-links navbar-right">
                   <li><a href="#">About</a></li>
                   <li><a href="#">Browse</a></li>
+                  <li><a href="#">Shop</a></li>
                 </ul>
               </div>
             </div>
@@ -55,7 +57,9 @@
         <div class="col-md-3">
           <div class="pull-left">
             <div class="sidebar">
-
+              <div class="sidebar-widget">
+                <p>WIDGET</p>
+              </div>
             Hello hello hello hello
             Hello hello hello hello
             Hello hello hello hello
@@ -70,17 +74,17 @@
 
         <div class="col-md-9">
           <div class-"pull-right">
-            <div class="blog-posts">
-
-              content
-              Hello hello hello hello
-              Hello hello hello hello
-              Hello hello hello hello
-              Hello hello hello hello
-              Hello hello hello hello
-              Hello hello hello hello
-              Hello hello hello hello
-              Hello hello hello hello
+            <div class="blog-content">
+              <div class="blog-post">
+                <h2>Blog Post Title</h2>
+                <img src="http://placekitten.com/200/300"/>
+                <p>This is blog content blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+              </div>
+              <div class="blog-post">
+                <h2>Blog Post Title</h2>
+                <img src="http://placekitten.com/200/300"/>
+                <p>This is blog content blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah</p>
+              </div>
 
 
             </div>
