--- a/wikiTreasureHunt.html
+++ b/wikiTreasureHunt.html
@@ -36,20 +36,24 @@
 
 		<!--Navigation-->
 
-		<!--div class="navbar col-md-12">
-			<div class="container">
-				<div class="" id="title-box">
-					<div class="title" id="pageTitle">
-						<h1>Happy Valentine's</h1>
+		<div class="container-flex">
+			<div class="row">
+				<div class="title col-md-12">
+					<div class="title">
+						<div class="pull-right" id="my-name">
+							<a href="index.html">
+								<h1>Bonnie Appleton</h1>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div-->
+		</div>
 
 		<div class="jumbotron">
 			<div class="container">
 				<h1>Wikipedia Treasure Hunt</h1>
-				<p>Having completed codecademy courses on how to create interactive websites with js and jquery and having done some self-study I decided to use my new-found knowledge to create an online quiz where each answer would only be revealed by correctly answering the previous question. This was created for a friend, but I include it here to show how I took the knowledge I had gained and applied it to a new problem.</p>
+				<p>Having completed Codecademy courses on how to create interactive websites with JavaScript and jQuery and having done some self-study I decided to use my new-found knowledge to create an online quiz where each answer would only be revealed by correctly answering the previous question. This was created for a friend, but I include it here to show how I took the knowledge I had gained and applied it to a new problem.</p>
 			</div>
 		</div>
 
