--- a/aboutMe.html
+++ b/aboutMe.html
@@ -59,9 +59,9 @@
               <img src="images/bonnieappleton.jpg">
             </div>
             <div class="cv-section" id="about-me">
-              <p>I'm an aspiring web developer currently based in Oxford, UK. I studied Chemistry at Oxford University before moving to <a href="www.ingenta.com">Ingenta</a> to test websites. Having worked there for three years I have gained a lot of web development knowledge and now want to spread my wings as a fully fledged developer.</p>
+              <p>I'm an aspiring web developer currently based in Oxford, UK. I studied Chemistry at Oxford University before starting out as a website tester. Having worked in QA for three years I have gained a lot of web development knowledge and now want to spread my wings as a fully fledged developer.</p>
               <p>This site is a space for me to showcase my what I've learnt so far and hopefully catch your eye! If you'd like to know more about my skills please see my <a href="CV.html">CV page</a>.</p>
-              <p>When I'm not learning about websites I sew and write about dressmaking online. I'm a keen amateur photographer and I love to cook Japanese food.</p>
+              <p>When I'm not learning about websites I sew and write about dressmaking online. I'm a keen amateur photographer and I make a mean bowl of ramen.</p>
               <p>I can't wait to hear from you!</p>
             </div>
           </div>
@@ -69,6 +69,17 @@
       </div>
 
     </div>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-63313808-2', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
   </body>
 </html>
